switch to default templates

--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,5 +1,9 @@
-{% if question.choice_set.results %}
-  <h2>{{ question.choice_set.results }}</h2>
-{% else %}
-  <p>No results are available</p>
-{% endif %}
+<h1>{{ question.question_text }}</h1>
+
+<ul>
+  {% for choice in question.choice_set.all %}
+  <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+  {% endfor %}
+</ul>
+
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
